# koopa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-test.yml
crates/libkoopa/: .clang-format  Cargo.toml
crates/libkoopa/include/: koopa.h
crates/libkoopa/src/: back.rs  driver.rs  errors.rs  io.rs  lib.rs  utils.rs
crates/libkoopa/src/raw/: builder.rs  entities.rs  ffi.rs  generator.rs  mod.rs
examples/: README.md
examples/brainfuck/: Cargo.toml  README.md  pi.bf
examples/brainfuck/src/: main.rs
examples/interpreter/: Cargo.toml  README.md  ext_funcs.rs  interpreter.rs  main.rs
examples/interpreter/ir/: 42.koopa  hello.koopa
examples/interpreter/src/: ext_funcs.rs  interpreter.rs  main.rs
examples/opt/: Cargo.toml  README.md  const_fold.rs  dce.rs
examples/opt/ir/: phi.koopa  unopt.koopa
examples/opt/src/: const_fold.rs  dce.rs  main.rs
koopa/: Cargo.toml  README.md
koopa/examples/: README.md
koopa/examples/brainfuck/: README.md  main.rs
koopa/examples/interpreter/: README.md  ext_funcs.rs  interpreter.rs
koopa/examples/interpreter/ir/: hello.koopa
koopa/examples/opt/: README.md  const_fold.rs  dce.rs
koopa/examples/opt/ir/: bb_params.koopa  issue23.koopa  local_opt.koopa
koopa/src/: lib.rs
koopa/src/back/: koopa.rs  llvm.rs  mod.rs
koopa/src/front/: ast.rs  builder.rs  lexer.rs  mod.rs  parser.rs  span.rs  token.rs
koopa/src/ir/: builder.rs  dfg.rs  entities.rs  idman.rs  layout.rs  mod.rs
koopa/src/opt/: mod.rs  pass.rs  passman.rs
libkoopa/: .clang-format  Cargo.toml  README.md
libkoopa/include/: koopa.h
libkoopa/src/: back.rs  driver.rs  utils.rs
libkoopa/src/raw/: builder.rs  entities.rs  ffi.rs  generator.rs  mod.rs
src/: lib.rs  utils.rs
src/back/: generator.rs  koopa.rs  llvm.rs  mod.rs
src/front/: ast.rs  builder.rs  driver.rs  lexer.rs  mod.rs  parser.rs  span.rs  token.rs
src/ir/: builder.rs  core.rs  dfg.rs  entities.rs  idman.rs  instructions.rs  layout.rs  mod.rs  structs.rs  types.rs  utils.rs  values.rs
src/ir/old/: core.rs  structs.rs  values.rs
src/opt/: mod.rs  pass.rs  passman.rs
