[package]
name = "koopa"
version = "0.0.3"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2021"
description = "Library for generating/parsing/optimizing Koopa IR."
readme = "README.md"
repository = "https://github.com/pku-minic/koopa"
documentation = "https://docs.rs/koopa"
license = "GPL-3.0"
keywords = ["compiler", "ir"]
exclude = ["/.github", "/crates", "/examples"]

[features]
# disables the front-end logger, returns error messages as strings
no-front-logger = []

[dependencies]
key-node-list = "0.0.3"
colored = "2"
